[package]
name = "goldie"
version = "0.3.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "Simple golden file testing"
readme = "README.md"
repository = "https://github.com/rossmacarthur/goldie"
license = "MIT OR Apache-2.0"
keywords = ["golden", "file", "testing", "tool"]
categories = ["development-tools::testing"]

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.55"
once_cell = "1.12.0"
pretty_assertions = "1.1.0"
serde = "1.0.136"
serde_json = "1.0.79"
tinytemplate = "1.2.1"

[dev-dependencies]
serde = { version = "1.0.136", features = ["derive"] }
