[package]
name = "goldie"
version = "0.4.2"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "Simple golden file testing"
readme = "README.md"
repository = "https://github.com/rossmacarthur/goldie"
license = "MIT OR Apache-2.0"
keywords = ["golden", "file", "testing", "tool"]
categories = ["development-tools::testing"]

[dependencies]
anyhow = "1.0.55"
once_cell = "1.12.0"
pretty_assertions = "1.3.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
upon = "0.5.0"
yansi = "0.5.1"
